get all replies from comment
