# app/controllers/api/v1/replies.rb
@@ -9,15 +9,6 @@ module API
           Reply.all.order('points')
         end
 
-        desc "Return all replies from a comment"
-        params do
-          requires :id, type: String, desc: "ID of the
-              comment"
-        end
-        get ":id" do
-          Reply.all.where(comment_id: permitted_params[:id]).order('points')
-        end
-
         desc "Return a reply"
         params do
           requires :id, type: String, desc: "ID of the
